--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,11 +57,11 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+  # uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - asset/Dictionary.db
+  assets:
+    - assets/Dictionary.db
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
